[gd_scene load_steps=7 format=2]

[ext_resource path="res://Testing resources/Shooter.png" type="Texture" id=1]
[ext_resource path="res://Testing resources/Gun.png" type="Texture" id=2]
[ext_resource path="res://shootingenemy.gd" type="Script" id=3]
[ext_resource path="res://EnemyGun.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6.334 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.81833, 2.34452 )

[node name="Shooter" type="KinematicBody2D"]
position = Vector2( 1.14441e-05, 1.14441e-05 )
scale = Vector2( 5.49272, 5.49272 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2( 1.071, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.399533, 0.399533 )
texture = ExtResource( 1 )

[node name="Pause" type="Timer" parent="."]
one_shot = true

[node name="Go" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.071, 1 )
shape = SubResource( 1 )

[node name="Gun" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Gun"]
position = Vector2( 8.25232, -2.04354 )
scale = Vector2( 0.254707, 0.254707 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gun"]
position = Vector2( 8.37854, -2.14572 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="Gun/CollisionShape2D"]
position = Vector2( 2.63907, -0.51494 )

[node name="Shoot" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Pause" to="." method="_on_Pause_timeout"]
[connection signal="timeout" from="Go" to="." method="_on_Go_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
